QE-198 Fix grid not spanning wrap width

--- a/wp-content/themes/quarkexpeditions/src/front-end/components/info-cards/style.scss
+++ b/wp-content/themes/quarkexpeditions/src/front-end/components/info-cards/style.scss
@@ -84,7 +84,7 @@
 			}
 
 			#{$self}__slider {
-				max-width: calc(100% - 2 * var(--grid-col-gutter));
+				width: auto;
 			}
 
 			#{$self}__card {
